# viewer

./: .clang-format  .gitignore  CMakeLists.txt
camera_module/: CMakeLists.txt
camera_module/common/: AbstractImagePoller.cpp  AbstractImagePoller.h  CMakeLists.txt  ThreadedImagePoller.cpp  ThreadedImagePoller.h
camera_module/emulated/: CMakeLists.txt  EmulatedConfigure.ui  EmulatedImagePoller.cpp  EmulatedImagePoller.h
camera_module/epics/: CMakeLists.txt  Channel.cpp  Channel.h  Device.cpp  Device.h  EpicsConfigure.ui  EpicsImagePoller.cpp  EpicsImagePoller.h
camera_module/uca/: CMakeLists.txt  UcaConfigure.cpp  UcaConfigure.h  UcaConfigure.ui  UcaImagePoller.cpp  UcaImagePoller.h  UcaState.cpp  UcaState.h  UcaTableModel.cpp  UcaTableModel.h
demos/: CMakeLists.txt  Demo.cpp
shared/: CMakeLists.txt  Channel.cpp  Channel.h
viewer/: CMakeLists.txt  CameraModuleFactory.cpp  CameraModuleFactory.h  DisplayWidget.cpp  DisplayWidget.h  EpicsImagePoller.h  FunctionEvent.cpp  FunctionEvent.h  ImagePoller.cpp  ImagePoller.h  Main.cpp  Main.h  PlaybackController.cpp  PlaybackController.h  Viewer.cpp  Viewer.h  Viewer.ui
